# kde-mac

./: GPLv2.txt  GPLv3.txt  LGPLv2.1.txt  LGPLv2.txt  README
aspell/Aspell.pmdoc/: 01aspell-contents.xml  01aspell.xml  index.xml
avahi/Avahi.pmdoc/: 01avahi-contents.xml  01avahi.xml  index.xml
boost/: Welcome.txt
boost/Boost.pmdoc/: 01boost-contents.xml  01boost.xml  01runtime-contents.xml  01runtime.xml  02boost-contents.xml  02boost.xml  02debug-contents.xml  02debug.xml  03boost-contents.xml  03boost.xml  03devel-contents.xml  03devel.xml  index.xml
clucene/: clucene.patch
dbus/: LICENSE.txt  dbus-launchd.patch  postflight.sh
dbus/D-Bus.pmdoc/: 01dbus-contents.xml  01dbus.xml  01destdir-contents.xml  01destdir.xml  02dbus-contents.xml  02dbus.xml  index.xml
enchant/Enchant.pmdoc/: 01enchant-contents.xml  01enchant.xml  index.xml
exiv2/: Welcome.rtf  logo.psd
exiv2/Exiv2.pmdoc/: 01destdir-contents.xml  01destdir.xml  01exiv-contents.xml  01exiv.xml  index.xml
expat/: CMakeLists.txt  LICENSE.txt  README.txt  expat_config.h.cmake
gdbm/GDBM.pmdoc/: 01gdbm-contents.xml  01gdbm.xml  index.xml
gettext/Gettext.pmdoc/: 01gettext-contents.xml  01gettext.xml  02gettext-contents.xml  02gettext.xml  index.xml
giflib/GIFLib.pmdoc/: 01giflib-contents.xml  01giflib.xml  index.xml
glib2/: glib2.patch
glib2/Glib2.pmdoc/: 01glib-contents.xml  01glib.xml  index.xml
hspell/HSpell.pmdoc/: 01hspell-contents.xml  01hspell.xml  index.xml
intltool/Intltool.pmdoc/: 01intltool-contents.xml  01intltool.xml  index.xml
jasper/Jasper.pmdoc/: 01jasper-contents.xml  01jasper.xml  index.xml
libdaemon/libdaemon.pmdoc/: 01libdaemon-contents.xml  01libdaemon.xml  index.xml
libjpeg/: libjpeg.patch
libjpeg/LibJPEG.pmdoc/: 01libjpeg-contents.xml  01libjpeg.xml  index.xml
libpng/: LICENSE.txt
libpng/LibPNG.pmdoc/: 01libpng-contents.xml  01libpng.xml  index.xml
openexr/OpenEXR.pmdoc/: 01ilmbase-contents.xml  01ilmbase.xml  02openexr-contents.xml  02openexr.xml  index.xml
pcre/PCRE.pmdoc/: 01pcre-contents.xml  01pcre.xml  index.xml
pkgconfig/pkg-config.pmdoc/: 01destdir-contents.xml  01destdir.xml  index.xml
pkgconfig/pkgconfig.pmdoc/: 01pkgconfig-contents.xml  01pkgconfig.xml  index.xml
raptor/: LICENSE.txt
raptor/Raptor.pmdoc/: 01raptor-contents.xml  01raptor.xml  index.xml
rasqal/Rasqal.pmdoc/: 01rasqal-contents.xml  01rasqal.xml  index.xml
redland/Redland.pmdoc/: 01redland-contents.xml  01redland.xml  index.xml
shared-mime-info/Shared-MIME-Info.pmdoc/: 01shared-contents.xml  01shared.xml  index.xml
